@@ -1,5 +1,14 @@
 2003-09-06 John Fleck <jfleck@inkstain.net>
 
+	* release-notes.xml
+	* rnapplets.xml
+	* rncontrolcenter.xml
+	* rndesktop.xml
+	* rnthanks.xml
+	many more minor edits
+
+2003-09-06 John Fleck <jfleck@inkstain.net>
+
 	
 	* release-notes.xml
 	include new applets section
